--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tweety"
-            android:textSize="@dimen/_18sdp"
+            android:textSize="@dimen/_19sdp"
             android:textStyle="bold"
             android:fontFamily="@font/segoebold"
             android:textColor="@color/blue"
@@ -52,6 +52,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="What's on your mind?"
+                android:fontFamily="@font/segoe"
+                android:textSize="@dimen/_15sdp"
                 android:background="@null"
                 android:minLines="2"
                 android:gravity="top|start" />
