--- a/app/src/main/res/layout/activity_modify_profile.xml
+++ b/app/src/main/res/layout/activity_modify_profile.xml
@@ -33,11 +33,14 @@
         android:hint="Last Name"
         android:inputType="text"/>
 
-    <EditText
+    <TextView
         android:id="@+id/email"
         style="@style/edit_text"
-        android:hint="Email"
-        android:inputType="textEmailAddress"/>
+        android:textColor="@color/scorpion"
+        android:paddingVertical="@dimen/_12sdp"
+        android:text="Email"
+        android:drawableEnd="@drawable/ic_lock"
+        android:textIsSelectable="true" />
 
     <Button
         android:id="@+id/submit"
