--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -21,8 +21,8 @@
 
             <!-- Avatar Placeholder -->
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:src="@mipmap/ic_launcher_round" />
 
             <LinearLayout
@@ -38,15 +38,18 @@
                     android:layout_height="wrap_content"
                     android:text="Author Name"
                     android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:fontFamily="@font/segoebold"
+                    android:textSize="@dimen/_16sdp"
+                    android:textColor="@color/scorpion" />
 
                 <TextView
                     android:id="@+id/text_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/segoe"
                     android:text="2 hours ago"
-                    android:textSize="12sp"
-                    android:textColor="#757575" />
+                    android:textSize="15sp"
+                    android:textColor="@color/scorpion" />
             </LinearLayout>
         </LinearLayout>
 
@@ -54,28 +57,56 @@
             android:id="@+id/text_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:text="This is the content of the post."
-            android:textSize="14sp"
-            android:textColor="#000000" />
+            android:fontFamily="@font/segoe"
+            android:textStyle="bold"
+            android:textSize="@dimen/_15sdp"
+            android:textColor="@color/scorpion"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <ImageButton
+                android:id="@+id/post_like"
+                android:layout_width="@dimen/_17sdp"
+                android:layout_height="@dimen/_17sdp"
+                android:src="@drawable/like"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:scaleType="centerInside"/>
+
             <TextView
                 android:id="@+id/text_likes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/segoebold"
+                android:textSize="@dimen/_14sdp"
+                android:layout_marginLeft="@dimen/_9sdp"
+                android:textColor="@color/dusty_gray"
                 android:text="0 Likes" />
+
+            <!-- Spacer -->
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/text_comments"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:fontFamily="@font/segoebold"
+                android:textSize="@dimen/_14sdp"
+                android:layout_marginRight="@dimen/_8sdp"
+                android:textColor="@color/dusty_gray"
                 android:text="0 Comments" />
         </LinearLayout>
 
