--- a/app/src/main/res/layout/activity_custom_user_list.xml
+++ b/app/src/main/res/layout/activity_custom_user_list.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
         android:visibility="gone"/>
-
+    <!--
     <ListView
         android:id="@+id/posts_list"
         android:layout_width="match_parent"
@@ -35,5 +35,12 @@
         android:divider="@color/wild_sand"
         android:listSelector="@color/transparent"
         android:dividerHeight="@dimen/_5sdp"/>
+    -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/posts_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        android:clipToPadding="false"/>
 
 </LinearLayout>
